[package]
name = "speedtest"
version = "1.4.0"
authors = ["nbrandolino nickbrandolino134@gmail.com"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = "3.0"
